--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -82,7 +82,7 @@
                       {{else}}
                         within
                       {{/ifAny ~}}
-                      <strong>{{round (multiply distance 0.00062137)}}</strong>
+                      <strong>{{round (multiply distance 0.62137)}}</strong>
                       miles of
                       <strong>{{{location}}}</strong>
                     {{/ifAll ~}}
