--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -160,7 +160,7 @@ header {
       }
     }
     #main-tab-bar,
-    #unauthenticated-tab-bar,
+    #user-not-signed-in-tab-bar,
     #main-extra-tab-bar {
       .mdc-tab {
         color: white;
@@ -347,17 +347,28 @@ footer h3,
   font-weight: $heading-font-weight;
 }
 .mdc-drawer--temporary {
-  z-index: 100;
+  z-index: 1010;
+  .mdc-drawer__content {
+    padding-top: 0;
+  }
+  .mdc-drawer__header::before {
+    padding-top: $header-upper-height;
+  }
+  .mdc-drawer__header-content {
+    background-color: $mdc-theme-primary;
+    align-items: center;
+    justify-content: center;
+    padding: $unit 0 0;
+  }
+}
+.mdc-drawer--occasional-ie11 {
+  box-sizing: border-box;
+  position: relative;
+  z-index: 4;
 }
 .mdc-tab .mdc-tab--label,
 .mdc-button {
   transition: 0.1s;
-}
-.mdc-drawer--temporary .mdc-drawer__header::before {
-  padding-top: $header-upper-height;
-}
-.mdc-drawer--temporary .mdc-drawer__header-content {
-  align-items: center;
 }
 .drawer-container-permanent {
   display: flex;
@@ -948,18 +959,31 @@ hr {
 .page-content {
   padding: $unit 0 $unit*2;
 }
+.mdc-drawer__content {
+  padding: 0 $unit/2 $unit;
+  #search-tab-bar {
+    padding: 0 $unit/2;
+    box-sizing: border-box;
+  }
+}
+.mdc-drawer__content.mdc-list {
+  padding: 0;
+}
 .mdc-drawer__content-padded {
   padding: $unit;
 }
 .mdc-drawer__content-heading {
   margin: 0;
-  padding: $unit;
+  padding: $unit $unit/2;
   .mdc-icon-toggle {
     margin-top: -$unit*(3/4);
   }
   .far.pull-right {
     line-height: $unit*1.7;
   }
+}
+.mdc-drawer__content-heading:focus {
+  outline: none;
 }
 
 .drawer-container {
@@ -1099,6 +1123,8 @@ hr {
 .container-content {
   width: 100%;
   padding-right: $unit;
+  margin-left: $unit;
+  margin-right: $unit;
   position: relative;
   max-width: 1200px;
   align-items: flex-end;
@@ -1283,22 +1309,42 @@ body {
     margin-top: $unit*1.5;
     margin-left: $unit;
   }
+  .mdc-typography--headline7 {
+    margin: 0;
+    padding: 11px;
+  }
   .mdc-layout-grid__inner {
     grid-gap: $unit/2;
   }
   .mdc-text-field {
-    z-index: 30;
+    z-index: 4;
     overflow: visible;
   }
-  .mdc-text-field--box::before, .mdc-text-field--box::after {
+  .mdc-text-field--box::before,
+  .mdc-text-field--box::after {
     background-color: transparent;
+    width: 100%;
   }
   .mdc-floating-label {
     transform: translateY(-50%) scale(0.75);
   }
-}
-.gm-style .gm-style-iw {
-  font-size: 0.9rem;
+  .geo-lookup {
+    color: $mdc-theme-primary !important;
+  }
+  .geo-lookup:hover {
+    font-weight: 600;
+    color: $mdc-theme-primary-dark !important;
+    cursor: pointer;
+  }
+  .geo-lookup:focus {
+    outline: none;
+  }
+  .search-distance {
+    font-variant: all-small-caps;
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.7);
+  }
 }
 
 /* End Search results card */
@@ -1435,6 +1481,7 @@ footer,
     .page-content {
       min-height: 40vh;
       .search-form {
+        position: relative;
         background-color: rgba(255, 255, 255, 0.6);
         width: 100%;
         padding: 0 $unit $unit/2;
@@ -1883,6 +1930,11 @@ footer {
       }
     }
   }
+  .container-content {
+    margin: 0;
+    padding: 0 $unit/2 $unit !important;
+    box-sizing: border-box;
+  }
 }
 
 @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
@@ -1900,6 +1952,34 @@ footer {
 @media screen and (min-width: $mobile-landscape-breakpoint + 1) {
   .hide-lg {
     display: none;
+  }
+  .mdc-drawer--occasional {
+    align-items: flex-start;
+    z-index: 1;
+    width: 320px;
+    min-height: 655px;
+    margin-right: $unit/2;
+    margin-bottom: 0;
+    padding-bottom: $unit;
+    border-right: none;
+    background-color: white !important;
+    color: rgba(0, 0, 0, 0.87);
+    border-left: 0;
+    left: 0;
+    right: initial;
+    display: inline-flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: static !important;
+    height: auto !important;
+    pointer-events: all;
+    .mdc-drawer__drawer {
+      transform: none;
+      width: 320px;
+      pointer-events: all;
+    }
   }
 }
 
