--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -56,7 +56,7 @@ gtag('event', 'document_hit', {
 });
 {{/each ~}}
 
-{{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
+{{#ifAny request.params.query.debug (compare request.url.hostname "fundingscotland.local") ~}}
 console.log('#### DEBUG MODE ON ####');
 console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
@@ -174,11 +174,11 @@ if(location.host.indexOf('.local') > -1){
 
       <aside class="mdc-drawer mdc-drawer--temporary" id="mobile-menu" data-mdc-auto-init="MDCTemporaryDrawer">
         <nav class="mdc-drawer__drawer">
-          <header class="mdc-drawer__header">
+          <div class="mdc-drawer__header">
             <div class="mdc-drawer__header-content mdc-top-app-bar__title">
               Funding <span class="scotland">Scotland</span>
             </div>
-          </header>
+          </div>
           <nav class="mdc-drawer__content mdc-list">
             {{#each @root.context.metaData.menus.main ~}}
             <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
@@ -220,7 +220,19 @@ if(location.host.indexOf('.local') > -1){
         </nav>
       </aside>
 
-      <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if @root.route.metaData.sidebarIcon}}drawer-container-temporary{{else}}drawer-container-permanent{{/if}}">
+      <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
+        {{#if layoutParts.sidebar ~}}
+        <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
+          <div class="mdc-drawer__drawer">
+            <div class="mdc-drawer__header hide-lg">
+              <div class="mdc-drawer__header-content mdc-top-app-bar__title">
+                Funding <span class="scotland">Scotland</span>
+              </div>
+            </div>
+            {{{layoutParts.sidebar}}}
+          </div>
+        </aside>
+        {{/if ~}}
         {{{layoutParts.body}}}
       </main>
 
@@ -297,6 +309,16 @@ if(location.host.indexOf('.local') > -1){
         </div>
       </footer>
     </div>
+    <div class="mdc-snackbar mdc-elevation--z10"
+         aria-live="assertive"
+         aria-atomic="true"
+         aria-hidden="true"
+         id="app-snackbar">
+      <div class="mdc-snackbar__text"></div>
+      <div class="mdc-snackbar__action-wrapper">
+        <button type="button" class="mdc-snackbar__action-button"></button>
+      </div>
+    </div>
   </fundingscotland-site>
   <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
@@ -323,6 +345,5 @@ if(location.host.indexOf('.local') > -1){
   <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-moreinfo="/cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/fundingscotland/main.js"></script>
   {{{layoutParts.foot}}}
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJdxcQpVKQ6HdrjnPXycUoZqsmp-Ep3l0&libraries=places&region=uk&callback=initMap" async defer></script>
 </body>
 </html>
