--- a/sites/configurations/fundingscotland/partials/account/sign-in.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-in.hbs
@@ -94,7 +94,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
         user.user.getIdTokenResult().then(function(idTokenResult) {
           console.log('ID Token Result', idTokenResult);
           fundingscotland.setCookie('fs_token', idTokenResult.token, 7);
-          window.location.href = '{{default @root.request.headers.referer "/"}}';
+          window.location.href = '{{#if (contains @root.request.headers.referer "sign-out")}}/{{else}}{{default @root.request.headers.referer "/"}}{{/if}}';
         });
       } else {
         $message.text('Something went wrong, signed in but no user?').show();
