--- a/sites/configurations/fundingscotland/partials/fund-search-form.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-form.hbs
@@ -1,8 +1,7 @@
 {{#*inline "term_checkbox"}}
 <div class="mdc-form-field">
   <div class="mdc-checkbox">
-    <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}"
-    name="{{#compare field "===" "type"}}{{field}}{{else}}{{field}}[]{{/compare}}" value="{{slug}}"{{#if (contains selected slug)}} checked{{/if}} />
+    <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}" name="{{#compare field "===" "type"}}{{field}}{{else}}{{field}}[]{{/compare}}" value="{{slug}}"{{#if (contains selected slug)}} checked{{/if}} />
     <div class="mdc-checkbox__background">
       <svg class="mdc-checkbox__checkmark"
       viewBox="0 0 24 24">
@@ -15,75 +14,46 @@
   </div>
 </div>
 <label for="{{instance_id}}_{{field}}_{{slug}}">
-  {{#compare value.key "===" "Management Board" ~}}
-  Trustee
-  {{else}}
   {{{default value.key value}}}
-  {{/compare ~}}
 </label>
 </div>
 {{/inline}}
 
-<aside class="mdc-drawer mdc-drawer--permanent mdc-elevation--z4">
   <div class="mdc-drawer__content">
-    <h2 class="mdc-drawer__content-heading hide-sm">Search funds</h2>
-
+    <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search funds</h2>
     <form action="/search" method="GET" class="search-form">
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+          <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
+          <label class="mdc-floating-label" for="keywords">
             Keywords
           </label>
           <div class="mdc-line-ripple"></div>
         </div>
       </div>
 
-      <!-- <div class="h-padding">
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.q}}" data-lpignore="true">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">
-            Minimum salary
-          </label>
-          <div class="mdc-line-ripple"></div>
-        </div>
-      </div> -->
-
-      <!-- <div class="h-padding">
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.q}}" data-lpignore="true">
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">
-            Maximum salary
-          </label>
-          <div class="mdc-line-ripple"></div>
-        </div>
-      </div> -->
-
-      {{#each (split "activities,beneficiaries" ",")}}
-        <h3 class="mdc-drawer__content-heading">
-          {{capitalize this}}
-          <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{../instance_id}}-{{this}}-collapse"
-                role="button" aria-pressed="false"
-                aria-label="Show roles" tabindex="0">
+      {{#each (split "fund_status,charities_only,geographical_areas_funded,type_of_cost,type_of_funding" ",")}}
+        <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
+          {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
+          <span class="mdc-icon-toggle pull-right">
             <i class="far {{#if (getProperty @root.request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
           </span>
         </h3>
-        <div id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
+        <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
           {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
-          {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+            {{#if key ~}}
+              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+            {{/if ~}}
           {{/each ~}}
         </div>
       {{/each}}
 
-      <div class="h-margin v-margin">
-        <button class="mdc-button mdc-button--raised mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
+      <div class="h-margin v-margin mdc-drawer--occasional-ie11">
+        <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
           <span class="far fa-search fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
           Search
         </button>
       </div>
     </form>
   </div>
-</aside>
