--- a/sites/configurations/fundingscotland/partials/funder-search-form.hbs
+++ b/sites/configurations/fundingscotland/partials/funder-search-form.hbs
@@ -7,7 +7,7 @@
           <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
           <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.keywords}}">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
-            funder name
+            Funder name
           </label>
           <div class="mdc-line-ripple"></div>
         </div>
@@ -15,7 +15,8 @@
 
       <div class="h-margin v-margin">
         <button class="mdc-button mdc-button--raised mdc-button--fullwidth" type="submit" id="{{instance_id}}-search-submit">
-          Search funders
+          <span class="far fa-search fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
+          Search
         </button>
       </div>
     </form>
