--- a/sites/configurations/fundingscotland/partials/fund-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-results.hbs
@@ -14,11 +14,15 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       <div class="mdc-select mdc-select--box pull-right" data-mdc-auto-init="MDCSelect">
         <select class="mdc-select__native-control" id="sort" name="sort">
-          <option value="undefined">Relevance</option>
-          <option value="date_deadline-asc">Deadline soon</option>
-          <option value="start_at-desc">Newest</option>
-          <option value="start_at-asc">Oldest</option>
-        </select>
+          <option value="relevance"{{#compare @root.request.params.query.sort "===" "relevance"}} selected{{/compare}}>Relevance</option>
+          <option value="max_funded_asc"{{#compare @root.request.params.query.sort "===" "max_funded_asc"}} selected{{/compare}}>Maximum funded - low to high</option>
+          <option value="max_funded_desc"{{#compare @root.request.params.query.sort "===" "max_funded_desc"}} selected{{/compare}}>Maximum funded - high to low</option>
+          <option value="deadline_date_asc"{{#compare @root.request.params.query.sort "===" "deadline_date_asc"}} selected{{/compare}}>Deadline date - soonest first</option>
+          <option value="deadline_date_desc"{{#compare @root.request.params.query.sort "===" "deadline_date_desc"}} selected{{/compare}}>Deadline date - soonest last</option>
+          <option value="date_last_reviewed"{{#compare @root.request.params.query.sort "===" "date_last_reviewed"}} selected{{/compare}}>Date last reviewed</option>
+          <option value="alphabetical_asc"{{#compare @root.request.params.query.sort "===" "alphabetical_asc"}} selected{{/compare}}>Alphabetical - a to z</option>
+          <option value="alphabetical_desc"{{#compare @root.request.params.query.sort "===" "alphabetical_desc"}} selected{{/compare}}>Alphabetical - z to a</option>
+          </select>
         <label class="mdc-floating-label mdc-floating-label--float-above" for="sort">
           Sort
         </label>
