--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-phase.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-phase.hbs
@@ -33,13 +33,13 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                 <h3><a href="/jobs/community-jobs-scotland/vacancies/p19v">16–29 year olds</a></h3>
                 <p>
-                  The following vacancies are only open to vulnerable unemployed 16 to 29 year olds, including <strong>carers</strong>, <strong>early service leavers (armed forces)</strong>, <strong>care experienced</strong>, <strong>disabled</strong>, <strong>young people with convictions</strong> and <strong>young people on an Activity Agreement</strong> who are not on the Work Programme, Work Choice, Specialist Employment Support, Work First Scotland or Work Able Scotland.
+                  The following vacancies are only open to vulnerable unemployed 16 to 29 year olds, including <strong>carers, early service leavers (armed forces), care experienced, disabled, young people with convictions</strong> and <strong>young people on an Activity Agreement</strong> who are not on the Work Programme, Work Choice, Specialist Employment Support, Work First Scotland, Work Able Scotland or Fair Start Scotland.
                 </p>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                 <h3><a href="/jobs/community-jobs-scotland/vacancies/p52">16–29 year olds with a disability</a></h3>
                 <p>
-                  The following vacancies are only open to unemployed 16 to 29 year olds who have a disability and or long term health condition and <strong>who are not</strong> on the Work Programme, Community Work Placement, Work Choice or Specialist Employment Support
+                  The following vacancies are only open to unemployed 16 to 29 year olds who have a disability and or long term health condition and <strong>who are not</strong> on the Work Programme, Community Work Placement, Work Choice, Specialist Employment Support, Work First Scotland, Work Able Scotland or Fair Start Scotland.
                 </p>
               </div>
             </div>
