--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -41,14 +41,6 @@ $desktop-landscape-breakpoint: 1280px;
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
 @import url('//fonts.googleapis.com/css?family=Montserrat:500,700|Open+Sans:400,500,600');
 
-// @include mdc-switch-knob-color($mdc-theme-primary);
-// @include mdc-switch-track-color($mdc-theme-primary);
-//
-// @include mdc-radio-unchecked-stroke-color($mdc-theme-secondary);
-// @include mdc-radio-checked-stroke-color($mdc-theme-primary);
-// @include mdc-radio-ink-color($mdc-theme-primary);
-// @include mdc-radio-focus-indicator-color($mdc-theme-primary);
-
 body {
   background-color: $mdc-theme-footer-dark;
   word-break: break-word;
@@ -197,6 +189,7 @@ header {
           text-transform: none;
           .fa-fw {
             margin-right: $unit/2;
+            vertical-align: inherit;
           }
           .fa-fw:last-child {
             padding-left: $unit/4;
@@ -312,6 +305,7 @@ footer h3,
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
+.mdc-typography--headline,
 .supplimentary-list-title {
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $heading-font-weight;
