--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -884,7 +884,6 @@ footer h3,
 .mdc-button,
 .mdc-select,
 .mdc-button,
-.gm-style-iw,
 .mdc-form-field,
 .mdc-typography,
 .mdc-form-field,
@@ -924,9 +923,6 @@ footer h3,
   font-weight: $base-font-weight;
   letter-spacing: 0.01rem;
 }
-.mdc-drawer--temporary .mdc-list-item {
-  font-weight: 600;
-}
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
@@ -934,6 +930,9 @@ footer h3,
 .supplimentary-list-title {
   font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $heading-font-weight;
+}
+.mdc-drawer--temporary .mdc-list-item {
+  font-weight: 600;
 }
 .mdc-typography {
   padding: 0;
@@ -1694,6 +1693,9 @@ form#settled_status {
     .mdc-button:focus::after {
       opacity: 0 !important;
     }
+    .fa-fw {
+      vertical-align: inherit;
+    }
     #user-menu {
       top: $nav-height !important;
     }
@@ -2371,6 +2373,7 @@ body.scottish-charity-awards:not(.post) {
     background-color: #b0be48;
   }
 }
+.pagination-mobile,
 .hidden {
   display: none !important;
 }
