--- a/sites/configurations/fundingscotland/partials/fund-search-results.hbs
+++ b/sites/configurations/fundingscotland/partials/fund-search-results.hbs
@@ -1,14 +1,222 @@
 {{> search_info paging=@root.data.search_data.detailed_results.pagination}}
 
+<aside id="save-search-dialog"
+  class="mdc-dialog"
+  role="alertdialog"
+  aria-labelledby="save-search-dialog-label"
+  aria-describedby="save-search-dialog-description"
+  data-mdc-auto-init="MDCDialog">
+  <form action="/save-search{{{@root.request.url.search}}}" method="POST" class="mdc-dialog__surface">
+    <header class="mdc-dialog__header">
+      <h2 id="save-search-dialog-label" class="mdc-dialog__header__title">
+        Give your search a name
+      </h2>
+    </header>
+    <section id="save-search-dialog-description" class="mdc-dialog__body">
+      <div class="mdc-text-field mdc-text-field--box" data-mdc-auto-init="MDCTextField">
+        <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input" value="
+{{~#with @root.request.params.query~}}
+  {{~#if keywords~}}
+    {{~keywords~}}
+    {{~#ifAny type_of_funding type_of_cost geographical_areas_funded charities_only activities beneficiaries fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if type_of_funding~}}
+    {{~#each (arrayify type_of_funding)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.type_of_funding.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+    {{~#ifAny type_of_cost geographical_areas_funded charities_only activities beneficiaries fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if type_of_cost~}}
+    {{~#each (arrayify type_of_cost)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.type_of_cost.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+    {{~#ifAny geographical_areas_funded charities_only activities beneficiaries fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if geographical_areas_funded~}}
+    {{~#each (arrayify geographical_areas_funded)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.geographical_areas_funded.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+    {{~#ifAny charities_only activities beneficiaries fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if charities_only~}}
+    {{~#each (arrayify charities_only)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.charities_only.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+    {{~#ifAny activities beneficiaries fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if activities~}}
+    {{~#each (arrayify activities)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.activities.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+    {{~#ifAny beneficiaries fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if beneficiaries~}}
+    {{~#each (arrayify beneficiaries)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.beneficiaries.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+    {{~#ifAny fund_status}}, {{/ifAny~}}
+  {{~/if~}}
+  {{~#if fund_status~}}
+    {{~#each (arrayify fund_status)~}}
+      {{~getProperty (getProperty @root.data.termsMaps.fund_status.slugsMap this) "term"~}}
+      {{~#unless @last}}, {{/unless~}}
+    {{~/each~}}
+  {{~/if}}
+{{~/with~}}">
+        <label for="saved-search-name" class="mdc-floating-label">Save search</label>
+        <div class="mdc-line-ripple"></div>
+      </div>
+      <div class="mdc-form-field">
+        <div class="mdc-checkbox">
+          <input type="checkbox"
+                 class="mdc-checkbox__native-control"
+                 name="subscribe"
+                 id="email-on"/>
+          <div class="mdc-checkbox__background">
+            <svg class="mdc-checkbox__checkmark"
+                 viewBox="0 0 24 24">
+              <path class="mdc-checkbox__checkmark-path"
+                    fill="none"
+                    d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+            </svg>
+            <div class="mdc-checkbox__mixedmark"></div>
+          </div>
+        </div>
+        <label for="email-on">Send funds matching this search by email</label>
+      </div>
+    </section>
+    <footer class="mdc-dialog__footer">
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
+      <button type="submit" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept">Save</button>
+    </footer>
+  </form>
+  <div class="mdc-dialog__backdrop"></div>
+</aside>
+
+<aside id="edit-search-dialog"
+  class="mdc-dialog"
+  role="alertdialog"
+  aria-labelledby="edit-search-dialog-label"
+  aria-describedby="edit-search-dialog-description"
+  data-mdc-auto-init="MDCDialog">
+  <div class="mdc-dialog__surface">
+    {{#if @root.data.auth ~}}
+    {{#with (
+              querystringify (obj)
+              keywords=@root.request.params.query.keywords
+              activities=(sort @root.request.params.query.activities)
+              beneficiaries=(sort @root.request.params.query.beneficiaries)
+              fund_status=(sort @root.request.params.query.fund_status)
+              charities_only=(sort @root.request.params.query.charities_only)
+              geographical_areas_funded=(sort @root.request.params.query.geographical_areas_funded)
+              type_of_cost=(sort @root.request.params.query.type_of_cost)
+              type_of_funding=(sort @root.request.params.query.type_of_funding)
+            ) ~}}
+    {{#if (itemAt @root.data.searches.items.[0] (indexOf (map @root.data.searches.items.[0] (getProp 'querystring')) this)) ~}}
+    {{#with (itemAt @root.data.searches.items.[0] (indexOf (map @root.data.searches.items.[0] (getProp 'querystring')) this)) ~}}
+    <header class="mdc-dialog__header">
+      <h2 id="edit-search-dialog-label" class="mdc-dialog__header__title">
+        Your search&ensp;
+        <span class="mdc-typography--body1">
+          <strong>{{{partition}}}</strong>
+        </span>
+      </h2>
+    </header>
+    <section id="edit-search-dialog-description" class="mdc-dialog__body">
+      <div class="mdc-chip-set mdc-chip-set--filter">
+        {{#> ajax_chip
+          onUrl="/toggle-subscription"
+          offUrl="/toggle-subscription"
+          onText="Send funds matching this search by email"
+          offText="Send funds matching this search by email"
+          onMethod="POST"
+          offMethod="POST"
+          iconClasses="far fa-envelope"
+          on=partitionActive
+        }}
+        {
+          "onData": {
+            "name": {{{stringify ../partition}}}
+          },
+          "offData": {
+            "name": {{{stringify ../partition}}}
+          }
+        }
+        {{/ajax_chip}}
+      </div>
+    </section>
+    <footer class="mdc-dialog__footer">
+      <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Close</button>
+    </footer>
+    {{/with ~}}
+    {{/if ~}}
+    {{/with ~}}
+    {{/if ~}}
+  </div>
+  <div class="mdc-dialog__backdrop"></div>
+</aside>
+
+{{> dialog_shortlist}}
+
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="/saved-searches" class="mdc-button mdc-button--raised save-search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
-        <span class="far fa-cog fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
-        Save search
-      </a>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone action">
+      {{#if data.auth ~}}
+        {{#with (
+                  querystringify (obj)
+                  keywords=@root.request.params.query.keywords
+                  activities=(sort @root.request.params.query.activities)
+                  beneficiaries=(sort @root.request.params.query.beneficiaries)
+                  fund_status=(sort @root.request.params.query.fund_status)
+                  charities_only=(sort @root.request.params.query.charities_only)
+                  geographical_areas_funded=(sort @root.request.params.query.geographical_areas_funded)
+                  type_of_cost=(sort @root.request.params.query.type_of_cost)
+                  type_of_funding=(sort @root.request.params.query.type_of_funding)
+                ) ~}}
+          <script>
+            document.addEventListener('DOMContentLoaded', function() {
+              console.log('Current Query String:', {{{stringify this}}});
+              console.log('Saved Search Query Strings:', {{{stringify (map @root.data.searches.items.[0] (getProp 'querystring'))}}});
+            });
+          </script>
+          {{#if (itemAt @root.data.searches.items.[0] (indexOf (map @root.data.searches.items.[0] (getProp 'querystring')) this)) ~}}
+            {{#with (itemAt @root.data.searches.items.[0] (indexOf (map @root.data.searches.items.[0] (getProp 'querystring')) this))}}
+              <h3 class="mdc-typography--headline6">
+                Your search&ensp;
+                <span class="mdc-typography--body1">
+                  <a name="#" data-dialog-target="#edit-search-dialog" style="cursor:pointer;">{{{partition}}}</a>
+                </span>
+              </h3>
+            {{/with ~}}
+          {{else}}
+            <button class="mdc-button mdc-button--raised mdc-button--large save-search hide-sm hide-md" id="save-search-button" data-dialog-target="#save-search-dialog">
+              <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
+              Save/email this search
+            </button>
+            <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg" id="filter-search-button" data-drawer-target="#sidebar-temporary">
+              <span class="far fa-search mdc-list-item__graphic" aria-hidden="true"></span>
+              Search filters
+            </button>
+          {{/if ~}}
+        {{else}}
+        <a href="/sign-up" class="mdc-button mdc-button--raised mdc-button--large save-search hide-sm hide-md" id="save-search-button">
+          <span class="far fa-sign-in-alt mdc-list-item__graphic" aria-hidden="true"></span>
+          Sign up to create email alerts
+        </a>
+        <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg" id="filter-search-button" data-drawer-target="#sidebar-temporary">
+          <span class="far fa-search mdc-list-item__graphic" aria-hidden="true"></span>
+          Search filters
+        </button>
+        {{/with ~}}
+      {{/if ~}}
     </div>
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone pagination-desktop">
       {{> pagination paging=@root.data.search_data.detailed_results.pagination}}
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
@@ -33,20 +241,28 @@
             <option value="alphabetical_asc"{{#compare @root.request.params.query.sort "===" "alphabetical_asc"}} selected{{/compare}}>Alphabetical - a to z</option>
             <option value="alphabetical_desc"{{#compare @root.request.params.query.sort "===" "alphabetical_desc"}} selected{{/compare}}>Alphabetical - z to a</option>
             </select>
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sort">
+          <label class="mdc-floating-label mdc-select__label--float-above" for="sort">
             Sort
           </label>
         </div>
       </form>
       {{/compare ~}}
     </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone pagination-mobile">
+      {{> pagination paging=@root.data.search_data.detailed_results.pagination}}
+    </div>
   </div>
 </div>
 
 {{#each @root.data.search_data.detailed_results.hits.hits ~}}
-{{> fund_search_result _source}}
+{{> fund_search_result _source sort=sort}}
 {{/each ~}}
 
 <div class="foot">
   {{> pagination paging=@root.data.search_data.detailed_results.pagination}}
+
+  <button class="mdc-button mdc-button--raised mdc-button--large save-search hide-lg" id="save-search-button-foot" data-dialog-target="#save-search-dialog">
+    <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
+    Save/email this search
+  </button>
 </div>
