--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1698,7 +1698,7 @@ footer,
 
 // Footer ======================================================================
 
-footer {
+footer.mdc-layout__footer {
   border-top: $unit solid $mdc-theme-primary;
   background-color: $mdc-theme-footer;
   box-shadow: $toolbar-shadow-reverse;
