--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -236,7 +236,7 @@ if(location.host.indexOf('.local') > -1){
         {{{layoutParts.body}}}
       </main>
 
-      <footer>
+      <footer class="mdc-layout__footer">
         <div class="footer-main">
           <div class="container-fluid">
             <div class="mdc-layout-grid">
