--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -958,7 +958,7 @@ a {
     margin: 0 $unit/2 $unit/4 0;
   }
 }
-.top-funds .top-job,
+.pagination-mobile,
 .fundingscotland-organisation .mdc-card.list .mdc-card__info--fund-funder {
   display: none !important;
 }
