--- a/sites/configurations/fundingscotland/templates/pages/browse.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/browse.hbs
@@ -1,6 +1,6 @@
 {{#if @root.data.auth ~}}
 <div class="container-fluid">
-  <div class="mdc-layout-grid home-jobs">
+  <div class="mdc-layout-grid home-funds">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
         <div class="browse-title mdc-typography--headline5">
@@ -8,7 +8,7 @@
         </div>
         <ul class="mdc-list">
           {{#each data.supplimentaryResponses.types.aggregations.activities_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?activity={{urlencode key}}" role="menuitem">
+          <a class="mdc-list-item" href="/browse/activities/{{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
               {{#with (lookup ../data.supplimentaryResponses.types.aggregations.activities.buckets @index) ~}}
               {{{key}}}
@@ -27,7 +27,7 @@
         </div>
         <ul class="mdc-list">
           {{#each data.supplimentaryResponses.types.aggregations.beneficiaries_slugs.buckets ~}}
-          <a class="mdc-list-item" href="/search?beneficiary={{urlencode key}}" role="menuitem">
+          <a class="mdc-list-item" href="/browse/beneficiaries/{{urlencode key}}" role="menuitem">
             <span class="mdc-list-item__text">
               {{#with (lookup ../data.supplimentaryResponses.types.aggregations.beneficiaries.buckets @index) ~}}
               {{{key}}}
