--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -738,7 +738,7 @@ a {
   }
   .mdc-card__actions {
     border-radius: 0 0 2px 2px;
-    background-color: $mdc-theme-complimentary-light;
+    background-color: $mdc-theme-complimentary;
     min-height: auto;
     a {
       color: $mdc-theme-primary-dark;
@@ -747,6 +747,9 @@ a {
       font-weight: 600;
       margin-right: $unit;
       color: $mdc-theme-primary-dark;
+    }
+    ul.mdc-card__action {
+      cursor: default;
     }
     .mdc-card__action:last-child {
       margin-right: 0;
@@ -770,26 +773,78 @@ a {
   width: 100%;
   background-color: #fff;
   margin-bottom: $unit*1.5;
-  .mdc-card__info--funder-title {
+  .mdc-card__info--vacancy-row {
+    padding: $unit/2;
+  }
+  .search-result-article__snippet,
+  .search-result-article__notes,
+  .mdc-card__info--vacancy-row {
+    flex: 1 0 auto;
+  }
+  .mdc-card__info--organisation-title {
     padding: $unit;
   }
-  .mdc-card__media--funder {
-    margin-right: $unit;
+  .mdc-card__media--organisation {
+    // margin-right: $unit;
+    z-index: 3;
   }
-  // .search-result-article__snippet {
-  //   padding: $unit;
-  //   background-color: $mdc-theme-complimentary-light;
-  // }
+  .search-result-article__snippet,
+  .search-result-article__notes {
+    padding: 0 $unit $unit/2;
+  }
+  .search-result-article__notes {
+    background-color: $mdc-theme-complimentary-light;
+    .mdc-typography--headline7 {
+      margin-top: $unit*(3/4);
+    }
+    .mdc-typography--body2 {
+      font-weight: 600;
+    }
+    h1 {
+      font-size: 1.4rem;
+      margin: $unit/2 0 $unit/4;
+    }
+    h2 {
+      font-size: 1.2rem;
+      margin: $unit/4 0 $unit/5;
+    }
+  }
   .user-notes {
     display: none;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-complimentary-light;
+    background-color: $mdc-theme-complimentary;
     .mdc-card__action {
       color: $mdc-theme-primary-dark;
     }
   }
 }
+.fundingscotland-fund.mdc-card.list,
+.fundingscotland-fund.mdc-card.mini,
+.fundingscotland-fund.mdc-card.gist,
+.fundingscotland-fund.mdc-card.search-result {
+  border-top: $unit/3 solid $mdc-theme-complimentary;
+  .mdc-card__info--vacancy-row {
+    padding-top: $unit/4;
+    padding-bottom: 0;
+  }
+}
+.fundingscotland-fund.mdc-card.list .mdc-card__action-notes,
+.fundingscotland-fund.mdc-card.gist .mdc-card__action-icons {
+  display: none;
+}
+.fundingscotland-fund.mdc-card.list,
+.fundingscotland-fund.mdc-card.gist,
+.fundingscotland-fund.mdc-card.mini {
+  .mdc-typography--headline5 {
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+  }
+  .mdc-card .mdc-card__actions {
+    padding: $unit/3 $unit/2;
+  }
+}
+
 .mdc-card.gist.tfn-post,
 .mdc-card.gist.tfn-feature {
   background-color: transparent;
@@ -919,6 +974,7 @@ a {
       .mdc-chip {
         margin-bottom: $unit/4;
         padding: $unit/5 $unit/2;
+        height: $unit*1.5;
         vertical-align: top;
         font-weight: 600;
         color: $mdc-theme-secondary-dark;
@@ -961,6 +1017,14 @@ a {
 .fundingscotland-page .mdc-card.full {
   width: 100%;
   background-color: #fff;
+}
+
+.browse-heading {
+  h1 {
+    background: white;
+    height: 200px;
+    padding: .25rem 1rem 1rem;
+  }
 }
 
 .mdc-chip-set {
@@ -1965,7 +2029,7 @@ footer.mdc-layout__footer {
 }
 
 @media screen and (max-width: 1100px) {
-  .goodmoves-vacancy-search .head {
+  .fundingscotland-fund-search .head {
     .mdc-layout-grid__cell.action {
       grid-column-end: span 6;
     }
@@ -1984,14 +2048,14 @@ footer.mdc-layout__footer {
   #detailed-results-container .head .pagination {
     display: none !important;
   }
-  .goodmoves-vacancy-search .head {
+  .fundingscotland-fund-search .head {
     .mdc-layout-grid__cell.action {
       grid-column-end: span 4;
     }
   }
 }
 @media screen and (max-width: 479px) {
-  .goodmoves-vacancy-search .head {
+  .fundingscotland-fund-search .head {
     .mdc-layout-grid__cell.action {
       grid-column-end: span 2;
     }
