--- a/sites/configurations/fundingscotland/partials/fund/gist.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/gist.hbs
@@ -1,9 +1,9 @@
 <div class="mdc-card gist" data-fund-id="{{Id}}">
   <div class="mdc-card__info--fund-row">
-    <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--funder" style="background-image:url({{funder.logo_url}});"></div>
+    <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--funder" style="background-image:url({{funder_organisation.logo_url}});"></div>
     <div class="mdc-card__info--fund">
       <div class="mdc-card__info--fund-title mdc-typography--headline7">
-        {{title}}
+        {{{title}}}
       </div>
       <div class="mdc-card__info--fund-funder mdc-typography--body1">
         <a href="/funder/{{funder.slug}}{{@root.request.url.search}}">{{funder.name}}</a>
@@ -14,10 +14,5 @@
       </div>
     </div>
   </div>
-  <hr class="mdc-list-divider">
-  <div class="mdc-card__actions">
-    <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/fund/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
-    </div>
-  </div>
+  {{> vacancy_actions slug=slug Id=Id}}
 </div>
