--- a/sites/configurations/fundingscotland/partials/fund/list.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/list.hbs
@@ -1,26 +1,11 @@
 <div class="mdc-card list" data-fund-id="{{Id}}">
   {{> fund_key_info}}
   <hr class="mdc-list-divider" />
-  {{#if description_short ~}}
-  <div class="search-result-article__snippet mdc-typography--body1">
-    {{{description_short}}}
-  </div>
-  <hr class="mdc-list-divider" />
-  {{/if}}
-  <div class="mdc-card__actions">
-    <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/fund/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
-    </div>
-    <!-- <div class="mdc-card__action-icons mdc-chip-set pull-right">
-      <div class="mdc-chip" onclick="goodmoves.toggleShortlistItem('{{Id}}');" data-mdc-auto-init="MDCChip">
-        <span class="far fa-star mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
-        <div class="mdc-chip__checkmark">
-          <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-            <path class="mdc-chip__checkmark-path" fill="none" stroke="#244817" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-          </svg>
-        </div>
-        <div class="mdc-chip__text noselect">Shortlist</div>
-      </div>
-    </div> -->
-  </div>
+  {{#compare (trim (getProperty @root.data.notes Id)) "!==" "" ~}}
+    {{> fund_description limit="3rem" description=description}}
+    {{> fund_notes limit="3rem"}}
+  {{else}}
+    {{> fund_description limit="10.5rem" description=description}}
+  {{/compare ~}}
+  {{> fund_actions slug=slug Id=Id}}
 </div>
