--- a/sites/configurations/fundingscotland/partials/fund/search-result.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/search-result.hbs
@@ -1,9 +1,9 @@
 <div class="mdc-card search-result" data-fund-id="{{Id}}">
   {{> fund_key_info}}
   <hr class="mdc-list-divider" />
-  {{#if description_short ~}}
+  {{#if description ~}}
   <div class="search-result-article__snippet mdc-typography--body1">
-    {{{description_short}}}
+    {{{description}}}
   </div>
   <hr class="mdc-list-divider" />
   {{/if}}
