--- a/sites/configurations/fundingscotland/partials/fund/key-info.hbs
+++ b/sites/configurations/fundingscotland/partials/fund/key-info.hbs
@@ -31,9 +31,7 @@
       {{#if fund_status ~}}
       <li class="mdc-card__info--fund-status mdc-typography--body1">
         <span class="fa-li"><span class="far fa-clock fa-fw" title="Status"></span></span>
-        {{#each fund_status ~}}
-          {{{this}}}{{#unless @last}}, {{/unless}}
-        {{/each}}
+        {{{fund_status}}}
       </li>
       {{/if ~}}
     </ul>
