--- a/sites/configurations/fundingscotland/templates/pages/home.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/home.hbs
@@ -1,10 +1,10 @@
 <div class="container-fluid home-banner">
   <!-- <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');"> -->
-  <div class="banner-search overlay" style="background-image: url('https://cms.scvo.org/wp-content/uploads/2018/03/THEGATHERING-22.02.18_0366.jpg');">
+  <div class="banner-search overlay">
     <div class="content page-content">
-      <div class="overlay-content">
+      <!-- <div class="overlay-content">
 
-      </div>
+      </div> -->
       {{#if @root.data.auth ~}}
         <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
           <div class="mdc-layout-grid">
