More FS branding

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -84,19 +84,29 @@ header {
     .mdc-top-app-bar__section--align-end {
       padding-right: $unit/2 !important;
     }
+    .mdc-top-app-bar__title.hide-sm {
+      width: 12rem;
+      height: 100%;
+      a {
+        height: 100%;
+        width: 100%;
+      }
+    }
     .mdc-top-app-bar__title {
-      font-weight: $heading-font-weight;
-      font-family: $heading-font-family;
-      // font-variant: all-small-caps;
-      letter-spacing: -0.2rem;
-      font-size: 3rem;
-      line-height: 4rem;
       padding: 0;
       margin: 0 $unit;
-      .scotland {
-        letter-spacing: -0.25rem;
-        font-weight: $heading-light-font-weight;
-        margin-left: -$unit/3;
+      display: block;
+      .brand-text {
+        font-weight: $heading-font-weight;
+        font-family: $heading-font-family;
+        letter-spacing: -0.2rem;
+        font-size: 3rem;
+        line-height: 4rem;
+        .scotland {
+          letter-spacing: -0.25rem;
+          font-weight: $heading-light-font-weight;
+          margin-left: -$unit/3;
+        }
       }
       a {
         display: block;
