--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -97,14 +97,14 @@ if(location.host.indexOf('.local') > -1){
                 <span class="far fa-fw fa-{{@root.route.metaData.sidebarButton.icon}}"></span>
               </button>
               {{/if}}
+              <span class="mdc-top-app-bar__title hide-sm">
+                <a href="/">
+                  <span class="brand-text">Funding <span class="scotland">Scotland</span></span>
+                </a>
+              </span>
               <span class="mdc-top-app-bar__title hide-md hide-lg">
                 <div class="brand-text">
                   Funding <span class="scotland">Scotland</span>
-                </div>
-              </span>
-              <span class="mdc-top-app-bar__title hide-sm">
-                <div class="brand-text">
-                  <a href="/">Funding <span class="scotland">Scotland</span></a>
                 </div>
               </span>
             </section>
