Currently recruiting now shows only orgs with open vacancies

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1720,7 +1720,7 @@ body {
   flex: 1 0 auto;
   .mdc-card__media--organisation {
     float: right;
-    margin: $unit 0 $unit/2 $unit/2;
+    margin: $unit $unit $unit/2 $unit/2;
   }
 }
 .goodmoves-organisation {
