Added reset password link on sign in error

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -714,6 +714,7 @@ a:hover {
 .mdc-card .mdc-chip {
   background-color: $mdc-theme-complimentary-dark;
 }
+.mdc-theme--on-primary a,
 .mdc-card .mdc-chip.mdc-chip--selected,
 .mdc-chip.mdc-chip--selected {
   background-color: $mdc-theme-primary;
