Sorting on shortlist

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2,9 +2,9 @@ $mdc-theme-primary: #42842A;
 $mdc-theme-primary-light: #679c54;
 $mdc-theme-primary-dark: #346921;
 
-$mdc-theme-complimentary: #d9e6d4;
-$mdc-theme-complimentary-light: #ecf2e9;
-$mdc-theme-complimentary-dark: #c6dabf;
+$mdc-theme-complimentary: #ecf2e9;
+$mdc-theme-complimentary-light: #c6dabf;
+$mdc-theme-complimentary-dark: #d9e6d4;
 
 $mdc-theme-secondary: #E0E0E0; // Gray 300
 $mdc-theme-secondary-light: #F5F5F5; // Gray 100
@@ -510,6 +510,14 @@ footer h3,
   }
 }
 
+.goodmoves-shortlist {
+  .mdc-layout-grid {
+    .mdc-select {
+      margin-bottom: $unit;
+    }
+  }
+}
+
 .goodmoves-settings-account {
   .mdc-button {
     width: 100%;
@@ -555,6 +563,10 @@ footer h3,
   .mdc-list {
     background-color: white;
     margin-bottom: $unit*1.5;
+    height: auto;
+    .mdc-list-item {
+      padding: $unit;
+    }
     .mdc-list-item--header {
       height: auto;
     }
