--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,14 +1,40 @@
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
-  {{#compare @root.data.shortlist_vacancies.open.hits.total ">" 0}}
-  <div class="t-margin-full pull-right">
-    <div class="mdc-chip-set mdc-chip-set--filter t-margin">
-      {{> shortlist_alerts}}
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <h1 class="mdc-typography--headline3 v-margin-full">
+          Shortlist
+        </h1>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        {{#compare @root.data.shortlist_vacancies.open.hits.total ">" 0}}
+        <div class="t-margin-full align-centre">
+          <div class="mdc-chip-set mdc-chip-set--filter t-margin">
+            {{> shortlist_alerts}}
+          </div>
+        </div>
+        {{/compare}}
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-4-tablet hide-sm">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+        <form action="{{{@root.request.url.path}}}" method="GET">
+          <div class="mdc-select mdc-select--box pull-right" data-mdc-auto-init="MDCSelect">
+            <select class="mdc-select__native-control" id="sort" name="sort" onchange="this.form.submit();">
+              <option value="closing_soon"{{#compare @root.request.params.query.sort "===" "closing_soon"}} selected{{/compare}}>Closing soon</option>
+              <option value="newest"{{#compare @root.request.params.query.sort "===" "newest"}} selected{{/compare}}>Newest</option>
+              <option value="oldest"{{#compare @root.request.params.query.sort "===" "oldest"}} selected{{/compare}}>Oldest</option>
+              <option value="salary_high"{{#compare @root.request.params.query.sort "===" "salary_high"}} selected{{/compare}}>Salary - high to low</option>
+              <option value="salary_low"{{#compare @root.request.params.query.sort "===" "salary_low"}} selected{{/compare}}>Salary - low to high</option>
+            </select>
+            <label class="mdc-floating-label mdc-select__label--float-above" for="sort">
+              Sort
+            </label>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-  {{/compare}}
-  <h1 class="mdc-typography--headline3 v-margin-full">
-    Shortlist
-  </h1>
 
   {{#compare @root.data.shortlist_vacancies.open.hits.total "===" 0}}
   {{#compare @root.data.shortlist_vacancies.closed.hits.total "===" 0}}
